--- a/package.json
+++ b/package.json
@@ -31,39 +31,39 @@
     "@fortawesome/vue-fontawesome": "^0.1.10",
     "@google-cloud/translate": "^6.0.3",
     "@johmun/vue-tags-input": "^2.1.0",
-    "bootstrap": "^4.5.0",
-    "bootstrap-vue": "^2.15.0",
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "exec-php": "0.0.5",
-    "firebase": "^7.15.1",
+    "firebase": "^7.21.1",
     "jquery": "^3.5.1",
-    "moment": "^2.28.0",
+    "moment": "^2.29.0",
     "register-service-worker": "^1.7.1",
     "request-promise": "^4.2.6",
     "uuid": "^8.3.0",
-    "vee-validate": "^2.2.0",
-    "vue": "^2.6.11",
+    "vee-validate": "^2.2.15",
+    "vue": "^2.6.12",
     "vue-analytics": "^5.22.1",
     "vue-loading-overlay": "^3.4.1",
-    "vue-router": "^3.2.0",
+    "vue-router": "^3.4.4",
     "vue-sweetalert2": "^3.0.8",
     "vue-tags": "^1.0.4",
-    "vuex": "^3.4.0"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-plugin-pwa": "~4.4.0",
-    "@vue/cli-plugin-router": "~4.4.0",
-    "@vue/cli-plugin-vuex": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-plugin-pwa": "^4.4.6",
+    "@vue/cli-plugin-router": "^4.4.6",
+    "@vue/cli-plugin-vuex": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-cordova": "~2.4.1",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.43.0"
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^4.44.2"
   }
 }
