--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "vue-router": "^3.4.4",
     "vue-sweetalert2": "^3.0.8",
     "vue-tags": "^1.0.4",
+    "vuelidate": "^0.7.5",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
