--- a/package.json
+++ b/package.json
@@ -65,9 +65,12 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
+    "sass": "^1.19.0",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-cordova": "~2.4.1",
+    "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.12",
+    "vuetify-loader": "^1.3.0",
     "webpack": "^4.44.2"
   }
 }
