--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "vee-validate": "^2.2.15",
     "vue": "^2.6.12",
     "vue-analytics": "^5.22.1",
+    "vue-cool-select": "^3.5.2",
     "vue-loading-overlay": "^3.4.1",
     "vue-router": "^3.4.4",
+    "vue-select": "^3.10.8",
     "vue-spinner": "^1.0.4",
     "vue-sweetalert2": "^3.0.8",
     "vue-tags": "^1.0.4",
