chnages for translation and user setting

--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -23,9 +23,9 @@
       "cordova-plugin-whitelist": {}
     },
     "platforms": [
-      "android",
       "ios",
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
