--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "cordova-android": "^9.0.0",
     "cordova-browser": "~6.0.0",
-    "cordova-ios": "~6.1.0",
+    "cordova-ios": "6.1.1",
     "cordova-plugin-whitelist": "~1.3.4"
   },
   "cordova": {
