--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "core-js": "^3.6.5",
     "exec-php": "0.0.5",
     "firebase": "^7.21.1",
+    "google-translate-token": "^1.0.0",
     "jquery": "^3.5.1",
     "moment": "^2.29.0",
     "register-service-worker": "^1.7.1",
     "request-promise": "^4.2.6",
     "sweetalert2": "^10.3.5",
+    "tronweb": "^3.1.0",
     "uuid": "^8.3.0",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.12",
