--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "google-translate-token": "^1.0.0",
     "jquery": "^3.5.1",
     "moment": "^2.29.0",
+    "qrcode.vue": "^1.7.0",
     "register-service-worker": "^1.7.1",
     "request-promise": "^4.2.6",
     "sweetalert2": "^10.3.5",
