--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "qrcode.vue": "^1.7.0",
     "register-service-worker": "^1.7.1",
     "request-promise": "^4.2.6",
+    "stripe": "^8.128.0",
     "sweetalert2": "^10.3.5",
     "tronweb": "^3.1.0",
     "uuid": "^8.3.0",
@@ -56,6 +57,7 @@
     "vue-router": "^3.4.4",
     "vue-select": "^3.10.8",
     "vue-spinner": "^1.0.4",
+    "vue-stripe-checkout": "^3.5.13",
     "vue-sweetalert2": "^3.0.8",
     "vue-tags": "^1.0.4",
     "vuelidate": "^0.7.5",
