--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "google-translate-token": "^1.0.0",
     "jquery": "^3.5.1",
     "moment": "^2.29.0",
+    "nodemailer": "^6.4.17",
     "qrcode.vue": "^1.7.0",
     "register-service-worker": "^1.7.1",
     "request-promise": "^4.2.6",
